--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
-爱心流水灯code/爱心流水灯code.7z
-爱心流水灯code/Listings/main.lst
-爱心流水灯code/Listings/proj.m51
+./PCB_Project/__Previews/
+./PCB_Project/History/
+./Keil_Project/Listings/
+./Keil_Project/proj.uvgui.xiao
